# armeria-example

./: BUILD  MODULE.bazel  WORKSPACE  hello.http  maven_install.json
proto/hello/service/v1/: BUILD.bazel  hello_service.proto
proto/hello/v1/: BUILD.bazel  hello.proto
src/main/java/com/example/myproject/: BUILD.bazel  HelloService.java  SimpleServer.java
src/test/java/com/example/myproject/: TestSimpleServer.java
